# University-Database

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: database.cpp  database.hpp  main.cpp  student.cpp  student.hpp  test.cpp
